fixed mobile view missalignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -721,6 +721,7 @@ z-index:2;
 
  html, body {
    overflow-x: hidden;
+
  }
  body {
    position: relative
@@ -785,7 +786,7 @@ z-index:2;
 
 
   .title-img-mobile{
-    width:450px;
+    width:380px;
 }
 
   .title-heading {
@@ -957,7 +958,10 @@ z-index:2;
   }
 
   .service-img{
-    width:98%;
+    width:100%;
+    min-width: 300px;
+    margin-bottom: 8px;
+    padding: 0;
 
   }
 
@@ -1092,8 +1096,8 @@ z-index:2;
     background-color: #fff;
     padding: 2% 0;
     display: inline-block;
-    width: 80%;
-    margin: 60px 30px;
+    width: 90%;
+    margin: 20px 10px;
     border-radius: 20px;
     -webkit-box-shadow: 0px 0px 60px -46px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 60px -46px rgba(0,0,0,0.75);
@@ -1117,6 +1121,7 @@ z-index:2;
     margin-top: 20px;
     margin-bottom: 20px;
     font-style: italic;
+    font-size: 1rem;
     font-weight: 200;
   }
 
